--- a/ui5.yaml
+++ b/ui5.yaml
@@ -12,6 +12,7 @@ framework:
   libraries:
     - name: sap.m
     - name: sap.ui.core
+    - name: sap.ui.table
     - name: themelib_sap_fiori_3
 server:
   customMiddleware:
