--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -36,7 +36,8 @@
     "dependencies": {
       "minUI5Version": "1.72.0",
       "libs": {
-        "sap.m": {}
+        "sap.m": {},
+        "sap.ui.table": {}
       },
       "components": []
     },
